<?xml version="1.0"?>
<package format="2">
  <name>air_thruster_gazebo_plugin</name>
  <version>0.0.0</version>
  <description>The air_thruster_gazebo_plugin package</description>

  <maintainer email="stavrinosgeo@gmail.com">George Stavrinos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>catkin</depend>
  <depend>gazebo</depend>

</package>
