<?xml version="1.0"?>
<package format="2">
  <name>air_thruster_gazebo_plugin_msgs</name>
  <version>0.0.1</version>
  <description>The air_thruster_gazebo_plugin_msgs package</description>

  <maintainer email="stavrinosgeo@gmail.com">George Stavrinos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>message_generation</build_depend>

</package>
