<?xml version="1.0"?>
<package format="2">
  <name>air_thruster_gazebo_ros_plugin</name>
  <version>0.0.0</version>
  <description>The air_thruster_gazebo_ros_plugin package</description>

  <maintainer email="stavrinosgeo@gmail.com">George Stavrinos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>air_thruster_gazebo_plugin</depend>

</package>
